clusters/common/istio/gateway/default-ingress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress
  namespace: istio-gateway
spec:
  selector:
    matchLabels:
      app: ingress
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: ingress
    spec:
      containers:
      - name: ingress
        image: nginx:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: ingress-svc
  namespace: istio-gateway
  labels:
    version: "1.0"
spec:
  selector:
    app: ingress
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
